--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -4,7 +4,7 @@
         <h2 style="color:#fff;">Reciver online Data</h2>
       </div>
       <div class="pull-right">
-        <h2 style="color:#fff;" id="time"></h2>
+        <h2 style="color:#fff;" id="timer"></h2>
       </div>
   </div>
 </div>
