--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -54,3 +54,9 @@
 <script id="entry-time" type="text/x-handlebars-template">
  <span>{{time}}</span>
 </script>
+
+<script id="entry-error" type="text/x-handlebars-template">
+<div class="alert alert-danger">
+  <h2 class="text-center">Connection Error</h2>
+</div>
+</script>
